# rust-kafka-transforms

./: Cargo.toml  Dockerfile  README.md
eda-consume-rust/: Cargo.toml  Dockerfile  README.md
eda-consume-rust/kubernetes/: deployment.yaml
eda-consume-rust/src/: main.rs
kubernetes/: deployment.yaml  services.yaml
src/: main.rs
