[package]
name = "kafka-transforms"
version = "0.0.1"
authors = ["Thien Tran <thien.tran@wowinc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1.33"
cloudevents-sdk = { version = "0.7.0", features = ["rdkafka"] }
lazy_static = "1.4.0"
bytes = "^1.0"
url = { version = "^2.1", features = ["serde"] }
serde_json = "^1.0"
futures = "^0.3"
tokio = { version = "^1.0", features = ["full"] }
clap = "2.33.1"
rdkafka = { version = "^0.29", features = ["cmake-build", "ssl"] }
axum = { version ="0.6.20"}
http = "^0.2"
tracing = "^0.1"
tracing-subscriber = "^0.2"
tower-http = { version = "^0.1", features = ["trace"] }
serde = { version = "^1.0", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
chrono = "0.4.31"