[package]
name = "kafka-poc"
version = "0.0.1"
authors = ["Thien Tran <thien.tran@wowinc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudevents-sdk = { version = "0.7.0", features = ["rdkafka"] }
serde_json = "^1.0"
futures = "^0.3"
tokio = { version = "^1.0", features = ["full"] }
rdkafka = { version = "^0.29", features = ["cmake-build", "ssl"] }
serde = { version = "^1.0", features = ["derive"] }
